# gw

./: AGENTS.md  Cargo.toml  README.md  STEERING.md
docs/: spec.md
docs/plans/: 2026-02-09-new-from-remote-pr-and-help-design.md  2026-02-09-rm-dot-and-dirty-force.md
skills/steering-by-user/: SKILL.md
src/: go_tui.rs  main.rs  picker.rs
tests/: config_root.rs  hooks_config.rs  init_zsh.rs  list.rs  new.rs  no_args.rs  remove.rs  spec_coverage.rs  version.rs
