[package]
name = "gw"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
blake3 = "1.6.1"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.29.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
shellexpand = "3.1.0"
thiserror = "2.0.11"
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.17.1"
